--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,12 +22,14 @@
     "git.followTagsWhenSync": true,
     "prettier.printWidth": 120,
     "prettier.tabWidth": 4,
+
     "python.analysis.completeFunctionParens": true,
     "python.analysis.diagnosticMode": "workspace",
     "python.terminal.activateEnvInCurrentTerminal": true,
     "python.testing.pytestArgs": [
         "tests"
     ],
+    "python.analysis.experimentalserver": false,
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
     "python.analysis.typeCheckingMode": "basic",
