--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,7 +134,7 @@ select = [
 
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+"__init__.py" = ["F401", "F403"]
 
 [tool.ruff.lint.isort]
 detect-same-package = true
@@ -209,7 +209,7 @@ ignore_errors = true
 exclude = ["**/.hatch", "**/node_modules", "**/__pycache__", "bundled/libs"]
 typeCheckingMode = "off"
 pythonVersion = "3.8"
-#stubPath = "typings"
+stubPath = "typings"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
