--- a/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
+++ b/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>PlatynUI .NET Interface</Description>
     <TargetFrameworks>net8.0-windows</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
