--- a/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
+++ b/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>PlatynUI .NET Interface</Description>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net481</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
 </Project>
