--- a/robot.toml
+++ b/robot.toml
@@ -1,2 +1,3 @@
 [env]
-PYTHONNET_RUNTIME = "coreclr"
+# PYTHONNET_RUNTIME = "netfx"
+# PYTHONNET_CORECLR_DOTNET_ROOT="C:\\Users\\daniel\\Downloads\\dotnet-sdk-8.0.302-win-x64"
