feat: add uiautomation spy/viewer

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # .NET Core build folders
 bin/
 obj/
+*.csproj.user
 
 # Common node modules locations
 /node_modules
@@ -37,11 +38,6 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
