--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ Documentation = "https://github.com/imbus/robotframework-platynui#readme"
 Issues = "https://github.com/imbus/robotframework-platynui/issues"
 Source = "https://github.com/imbus/robotframework-platynui"
 
+[project.scripts]
+"PlatynUI.UiAutomation.Spy" = "PlatynUI.technology.uiautomation.spy.__main__:main"
+
 [tool.hatch.version]
 path = "src/PlatynUI/__about__.py"
 
