chore(release): bump version 0.0.0 → 0.1.0

--- a/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
+++ b/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
@@ -8,6 +8,7 @@ SPDX-License-Identifier: Apache-2.0
 
   <PropertyGroup>
     <Description>PlatynUI .NET Interface</Description>
+    <Version>0.1.0</Version>
     <TargetFrameworks>net8.0-windows;net481</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
