--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,22 @@ extra-dependencies = ["mypy>=1.0.0"]
 [tool.hatch.envs.types.scripts]
 check = "mypy --install-types --non-interactive {args:src/PlatynUI tests}"
 
+[tool.hatch.envs.build]
+skip-install = true
+detached = true
+python = "3.8"
+dependencies = ["GitPython", "semantic-version", "commitizen", "git-cliff"]
+
+[tool.hatch.envs.build.scripts]
+update-changelog = ["python scripts/update_changelog.py"]
+update-git-versions = ["python scripts/update_git_versions.py"]
+update-doc-links = ["python scripts/update_doc_links.py"]
+package = ["python scripts/package.py"]
+publish = ["python scripts/publish.py"]
+extract-release-notes = ["python scripts/extract_release_notes.py"]
+is-prerelease = ["python scripts/is_prerelease.py"]
+bump = ["cz bump"]
+
 [tool.coverage.run]
 source_pkgs = ["robotframework_platynui", "tests"]
 branch = true
