--- a/src/PlatynUI.Runtime/PlatynUI.Runtime.csproj
+++ b/src/PlatynUI.Runtime/PlatynUI.Runtime.csproj
@@ -3,12 +3,16 @@
   <PropertyGroup>
     <Description>PlatynUI .NET Runtime</Description>
     <Version>0.1.0</Version>
-    <TargetFrameworks>net8.0-windows;net481</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RootNamespace>PlatynUI.Runtime</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
