--- a/src/PlatynUI.Technology.UiAutomation.Spy/PlatynUI.Technology.UiAutomation.Spy.csproj
+++ b/src/PlatynUI.Technology.UiAutomation.Spy/PlatynUI.Technology.UiAutomation.Spy.csproj
@@ -9,7 +9,7 @@ SPDX-License-Identifier: Apache-2.0
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <Version>0.1.0</Version>
-    <TargetFrameworks>net8.0-windows;net481</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
