feat: search for elements in PlatynUI.Spy using XPath

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -10,10 +10,12 @@ SPDX-PackageDownloadLocation = "https://github.com/imbus/robotframework-PlatynUI
 
 [[annotations]]
 path = [
+    "**/*.ico",
     "**/*.pyi",
     "**/*.sln",
     "**/*.csproj",
     "**/*.xaml",
+    "**/*.axaml",
     "**/app.manifest",
     "**/NativeMethods.txt",
     "**/App.config",
