--- a/src/PlatynUI.Spy/PlatynUI.Spy.csproj
+++ b/src/PlatynUI.Spy/PlatynUI.Spy.csproj
@@ -23,8 +23,9 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.11" />
-    <PackageReference Include="Semi.Avalonia" Version="11.0.7.4" />
-    <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.0.7.2" />
+    <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
+    <!-- <PackageReference Include="Semi.Avalonia" Version="11.0.7.4" />
+    <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.0.7.2" /> -->
   </ItemGroup>
 
   <ItemGroup>
