refactor: user own hatch custom hook to build dotnet packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [build-system]
-requires = ["hatchling", "hatch-build-scripts"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -56,10 +56,9 @@ sources = ["src"]
 [tool.hatch.build.targets.sdist]
 exclude = ["src/PlatynUI/technology/uiautomation/runtime"]
 
+[tool.hatch.build.targets.wheel.hooks.custom]
+path = "scripts/dotnet_build_hook.py"
 
-[[tool.hatch.build.hooks.build-scripts.scripts]]
-commands = ["hatch run clean-runtime", "hatch run build-runtime"]
-artifacts = {}
 
 [tool.hatch.envs.default]
 installer = "uv"
@@ -79,6 +78,7 @@ dependencies = [
   "robotframework-tidy",
   "robotframework-robocop",
   "reuse",
+  "hatchling",
 ]
 # features = ["all"]
 # pre-install-commands = ["install-packages"]
