--- a/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
+++ b/src/PlatynUI.Technology.UiAutomation/PlatynUI.Technology.UiAutomation.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>PlatynUI .NET Interface</Description>
-    <Version>0.1.0</Version>
+    <Version>0.1.1-dev.10</Version>
     <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
