--- a/src/PlatynUI.Platform.Win32/PlatynUI.Platform.Win32.csproj
+++ b/src/PlatynUI.Platform.Win32/PlatynUI.Platform.Win32.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>PlatynUI Platform Win32</Description>
-    <Version>0.1.0</Version>
+    <Version>0.1.1-dev.10</Version>
     <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
