--- a/src/PlatynUI.Spy/PlatynUI.Spy.csproj
+++ b/src/PlatynUI.Spy/PlatynUI.Spy.csproj
@@ -24,6 +24,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.11" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
+    <PackageReference Include="System.CodeDom" Version="8.0.0" />
     <!-- <PackageReference Include="Semi.Avalonia" Version="11.0.7.4" />
     <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.0.7.2" /> -->
   </ItemGroup>
