fix(spy): some customizations for linux

--- a/src/PlatynUI.Spy/Properties/launchSettings.json
+++ b/src/PlatynUI.Spy/Properties/launchSettings.json
@@ -3,11 +3,18 @@
     "PlatynUI.Spy": {
       "commandName": "Project"
     },
-    "PlatynUI.Spy X11 ssh": {
+    "PlatynUI.Spy X11 ssh :10.0": {
       "commandName": "Project",
       "environmentVariables": {
-        "DISPLAY": ":10.0"
+        "DISPLAY": ":10.0",
+      }
+    },
+    "PlatynUI.Spy X11 ssh :0": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "DISPLAY": ":0",
       }
     }
+
   }
 }
