--- a/src/Playground/Properties/launchSettings.json
+++ b/src/Playground/Properties/launchSettings.json
@@ -1,26 +1,25 @@
 {
   "profiles": {
-    "PlatynUI.Spy": {
+    "Playground": {
       "commandName": "Project"
     },
-    "PlatynUI.Spy X11 ssh :10.0": {
+    "Playground X11 ssh :10.0": {
       "commandName": "Project",
       "environmentVariables": {
         "DISPLAY": ":10.0",
       }
     },
-    "PlatynUI.Spy X11 ssh :0": {
+    "Playground X11 ssh :0": {
       "commandName": "Project",
       "environmentVariables": {
         "DISPLAY": ":0",
       }
     },
-    "PlatynUI.Spy X11 ssh :1": {
+    "Playground X11 ssh :1": {
       "commandName": "Project",
       "environmentVariables": {
         "DISPLAY": ":1",
       }
     }
-
   }
 }
