--- a/src/PlatynUI.Spy/PlatynUI.Spy.csproj
+++ b/src/PlatynUI.Spy/PlatynUI.Spy.csproj
@@ -35,5 +35,6 @@
     <ProjectReference Include="..\PlatynUI.Platform.Win32\PlatynUI.Platform.Win32.csproj" />
     <ProjectReference Include="..\PlatynUI.Platform.X11\PlatynUI.Platform.X11.csproj" />
     <ProjectReference Include="..\PlatynUI.Extension.Linux.AtSpi2\PlatynUI.Extension.Linux.AtSpi2.csproj" />
+    <ProjectReference Include="..\PlatynUI.Provider.Client\PlatynUI.Provider.Client.csproj" />
   </ItemGroup>
 </Project>
