--- a/tests/apps/AvaloniaTestApp/AvaloniaTestApp.csproj
+++ b/tests/apps/AvaloniaTestApp/AvaloniaTestApp.csproj
@@ -22,4 +22,8 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\PlatynUI.Provider.Avalonia\PlatynUI.Provider.Avalonia.csproj" />
+  </ItemGroup>
 </Project>
