--- a/tests/apps/WpfTestApp/WpfTestApp.csproj
+++ b/tests/apps/WpfTestApp/WpfTestApp.csproj
@@ -4,14 +4,14 @@ SPDX-FileCopyrightText: 2024 Daniel Biehl <daniel.biehl@imbus.de>
 SPDX-License-Identifier: Apache-2.0
 -->
 
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>WPF Testapp</Description>
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
     <UseWPF>true</UseWPF>
     <IsPackable>false</IsPackable>
