--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,6 @@
         "editor.defaultFormatter": "csharpier.csharpier-vscode"
     },
     "csharp.debug.justMyCode": false,
-    "csharp.debug.symbolOptions.searchMicrosoftSymbolServer": true,
-    "csharp.debug.symbolOptions.searchNuGetOrgSymbolServer": true
+    "csharp.debug.symbolOptions.searchMicrosoftSymbolServer": false,
+    "csharp.debug.symbolOptions.searchNuGetOrgSymbolServer": false
 }
