chore(release): bump version 0.1.0 → 0.2.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
     },
     "csharp.debug.justMyCode": false,
     "csharp.debug.symbolOptions.searchMicrosoftSymbolServer": false,
-    "csharp.debug.symbolOptions.searchNuGetOrgSymbolServer": false
+    "csharp.debug.symbolOptions.searchNuGetOrgSymbolServer": false,
+    "robotcode.robocop.enabled": false
 }
