--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <Version>0.1.1-dev.11</Version>
+        <Version>0.2.0</Version>
         <Authors>Daniel Biehl &lt;daniel.biehl@imbus.de&gt;</Authors>
         <Product>PlatynUI</Product>
 
