--- a/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
+++ b/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="11.1.4" />
+    <PackageReference Include="Avalonia.Desktop" Version="[11.1,]" />
   </ItemGroup>
 
   <PropertyGroup>
