--- a/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
+++ b/src/PlatynUI.Provider.Avalonia/PlatynUI.Provider.Avalonia.csproj
@@ -5,7 +5,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="[11.1,]" />
+    <PackageReference Include="Avalonia.Desktop" Version="[11.1,]">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
