--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,13 +29,11 @@
     "python.testing.pytestArgs": [
         "tests"
     ],
-    "python.analysis.experimentalserver": false,
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
-    "python.analysis.typeCheckingMode": "basic",
     "black-formatter.args": [
         "--config",
-        "${workspaceFolder}./pyproject.toml"
+        "${workspaceFolder}/pyproject.toml"
     ],
     "ruff.importStrategy": "fromEnvironment",
     "ruff.lint.args": [
