--- a/pyproject.toml
+++ b/pyproject.toml
@@ -284,10 +284,15 @@ pre_bump_hooks = [
 [tool.cibuildwheel]
 build-verbosity = 1
 skip = ["pp*"]
-archs = "x86_64"
+
 manylinux-x86_64-image = "manylinux_2_28"
 
+[tool.cibuildwheel.windows]
+archs = ["auto64"]
+
 [tool.cibuildwheel.linux]
+archs = ["x86_64"]
+
 before-all = """\
 if command -v yum 2>&1 > /dev/null
 then
