--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,18 +78,34 @@ dependencies = [
   "robotframework-robocop",
   "reuse",
   "hatchling",
+  "pre-commit",
 ]
 # features = ["all"]
 # pre-install-commands = ["install-packages"]
 
 [tool.hatch.envs.default.scripts]
-# no scripts here
+# pre-commit checks
+pre-commit-check = "pre-commit run --all-files"
+pre-commit-check-log = "pre-commit run --all-files > pre-commit.log 2>&1"
+
+# Auto-formatting scripts
+format-black = "black ."
+format-ruff = "ruff format ."
+format-robotidy = "robotidy ."
+format = ["format-black", "format-ruff" ,"format-robotidy"]
 
 
 [tool.hatch.envs.types]
 extra-dependencies = ["mypy>=1.0.0"]
+
 [tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:src/PlatynUI tests}"
+check-mypy = "mypy --install-types --non-interactive {args:src/PlatynUI tests}"
+check-robotidy = "robotidy --check ."
+check-robocop = "robocop ."
+check-black = "black --check ."
+check-ruff = "ruff check ."
+check-pytest = "pytest"
+check = ["check-mypy", "check-robotidy", "check-robocop", "check-black", "check-ruff", "check-pytest"]
 
 [tool.hatch.envs.build]
 skip-install = true
@@ -129,7 +145,7 @@ target-version = "py38"
 extend-exclude = ["typings"]
 
 [tool.ruff.lint]
-ignore = ["E741", "N805", "N999", "RUF012", "RUF006", "ISC001"]
+ignore = ["E741", "N805", "N999", "RUF012", "RUF006", "RUF100", "ISC001", "E501"]
 select = [
   "E",
   "F",
@@ -172,6 +188,14 @@ select = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
+"src/PlatynUI/technology/uiautomation/core/loader.py" = ["G004"] # TODO: Fix logging statement uses f-string
+"src/PlatynUI/ui/core/devices/displaydevice.py" = ["E501"] # TODO: Fix line too long
+"src/PlatynUI/ui/dialog.py" = ["F403", "F405"] # TODO: Fix star imports and undefined names
+"src/PlatynUI/ui/graphic.py" = ["F403", "F405"] # TODO: Fix star imports and undefined names
+"src/PlatynUI/ui/scrollbar.py" = ["F403", "F405"] # TODO: Fix star imports and undefined names
+"src/PlatynUI/ui/table.py" = ["F403", "F405"] # TODO: Fix star imports and undefined names
+"tests/robot/WpfTestApp/mapping.py" = ["N802"] # TODO: Fix function name should be lowercase
+
 
 [tool.ruff.lint.isort]
 detect-same-package = true
@@ -186,13 +210,28 @@ mark-parentheses = false
 [tool.black]
 line-length = 120
 target-version = ['py39']
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | typings/System/Runtime/InteropServices/ObjectiveC/__init__.pyi # TODO: Fix cannot parse for target version Python 3.9
+)/
+'''
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 #addopts = "-ra -vv -rf"
 addopts = "-ra -rf --tb=short -vv"
 filterwarnings = "ignore:.*Using or importing the ABCs from 'collections' instead of from 'collections.abc'.*:DeprecationWarning"
-testpaths = ["tests"]
+testpaths = ["tests/python/test_types.py"]
 junit_suite_name = "robotcode"
 #console_output_style = "classic"
 log_cli = true
@@ -217,19 +256,26 @@ disallow_untyped_decorators = false
 disallow_subclassing_any = false
 explicit_package_bases = true
 namespace_packages = true
-exclude = [
-  '^\.mypy_cache/',
-  '^\.venv/',
-  '^\.hatch/',
-  "^build/",
-  "^dist/",
-  "^out/",
-  "^playground/",
-  "^scripts/",
-  "^typings/",
-]
+ignore_missing_imports = true # TODO: enable this
 mypy_path = ["src", "typings"]
-disable_error_code = ["type-abstract"]
+disable_error_code = [
+  "type-abstract",
+  "attr-defined", # TODO: Fix attribute errors
+  "arg-type", # TODO: Fix argument type errors
+  "no-any-return", # TODO: Fix functions returning Any
+  "var-annotated", # TODO: Fix variable annotations
+  "no-untyped-def", # TODO: Add type annotations to functions
+  "no-untyped-call", # TODO: Add type annotations to function calls
+  "valid-type", # TODO: Fix invalid type errors
+  "misc", # TODO: Fix miscellaneous errors
+  "assignment", # TODO: Fix assignment errors
+  "return-value", # TODO: Fix return value errors
+  "type-var", # TODO: Fix type variable errors
+  "unused-ignore", # TODO: Remove unused ignore comments
+  "override", # TODO: Fix method override errors
+  "no-redef", # TODO: Fix redefinition errors
+  "unreachable", # TODO: Fix unreachable code
+  ]
 
 # allow_untyped_calls = true
 
@@ -250,9 +296,25 @@ module = [
   "Sytem.*",
   "Microsoft.*",
   "PlatynUI.Extension.Win32.UiAutomation.*",
+  "PlatynUI.Platform.X11.Interop.XProto.*",
   "typings.*",
 ]
 ignore_errors = true
+follow_imports = "skip"
+ignore_missing_imports = true
+
+# robocop
+[tool.robocop]
+exclude = [
+    "0201", # TODO: Fix missing documentation in keywords
+    "0202", # TODO: Fix missing documentation in test cases
+    "0203", # TODO: Fix missing documentation in suite
+    "0302", # TODO: Fix keyword names to follow case convention
+    "0308", # TODO: Fix test case titles to start with capital letter
+    "0504", # TODO: Fix test cases that are too long
+    "0505", # TODO: Fix test cases with too many keywords
+    "0920", # TODO: Fix unused variables
+]
 
 # pyright
 [tool.pyright]
