--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ format = ["format-black", "format-ruff", "format-robotidy"]
 
 # Run tests
 python-tests = "pytest tests/python/test_types.py"
-robot-tests = "robot --outputdir test-results tests/robot/matrix.robot"
+robot-tests = "robot {args:--outputdir test/results} tests/robot/matrix.robot"
 
 [tool.hatch.envs.types]
 extra-dependencies = ["mypy>=1.0.0"]
