--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -48,7 +48,7 @@ jobs:
         run: hatch run python-tests
 
       - name: Run Robot Framework Tests
-        run: hatch run robot-tests "--outputdir test-results/os-${{ matrix.os }}-py-${{ matrix.python-version }}-rf-${{ matrix.robot-version }}"
+        run: hatch run robot-tests --outputdir test-results/os-${{ matrix.os }}-py-${{ matrix.python-version }}-rf-${{ matrix.robot-version }}
 
       - name: Upload Test Results
         if: always()
