--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -64,11 +64,14 @@ jobs:
       - name: Download Test Results
         uses: actions/download-artifact@v4
 
+      - name: List Downloaded Test Results
+        run: ls -R test-results
+
       - name: Install Robot Framework
         run: pip install robotframework
 
       - name: Merge Test Results
-        run: rebot --outputdir merged-results --merge test-results/**/test-results/**/*.xml
+        run: rebot --outputdir merged-results --merge test-results/**/**/*.xml
 
       - name: Upload Merged Test Results
         uses: actions/upload-artifact@v4
